<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".recipes.RecipeCreateActivity">

    <TextView
        android:textStyle="bold"
        android:textColor="#333333"
        android:textSize="16dp"
        android:text="Title" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#7171F2" />

    <EditText
        android:layout_width="match_parent"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:id="@+id/edit_title"/>

    <TextView
        android:textStyle="bold"
        android:textColor="#333333"
        android:textSize="16dp"
        android:text="Time (in minutes):" android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#7171F2" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:layout_marginLeft="10dp"/>


    <TextView
        android:textStyle="bold"
        android:textColor="#333333"
        android:textSize="16dp"
        android:text="Rating:" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#7171F2" />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_rating"
        android:stepSize="1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textStyle="bold"
            android:textColor="#333333"
            android:textSize="16dp"
            android:layout_weight="1"

            android:text="Ingredients:"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/ingredient_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_add_ness_blue_24dp"
            android:nestedScrollingEnabled="true" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#7171F2" />
    <LinearLayout
        android:id="@+id/ingredient_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--<include layout="@layout/ingredients_fields"></include>-->
        <!--<include layout="@layout/ingredients_fields2"></include>-->
        <!--<include layout="@layout/ingredients_fields2"></include>-->
    </LinearLayout>

    <!---<Adding instructions here>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Instructions: "
            android:textSize="16dp"
            android:layout_weight="1"/>
        <ImageView android:id="@+id/instructions_add"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/ic_add_ness_blue_24dp"
            android:nestedScrollingEnabled="true"/>

    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#7171F2"/>
    <LinearLayout android:id="@+id/instructions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>


</LinearLayout>
</ScrollView>