<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".recipes.RecipeListActivity">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="Add"
        app:showAsAction="ifRoom"/>
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
    <!--android:orderInCategory="100" app:showAsAction="never"  />-->
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_white_24dp"
        android:title="Add"
        app:showAsAction="ifRoom"/>
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never"  />-->
</menu>
