<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent" tools:context=".recipes.RecipeListActivity"
    android:orientation="vertical"
    >

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/my_toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:elevation="4dp"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->

    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" />-->


    <include layout="@layout/recipe_filter"></include>
    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/listview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/emptyRecipes"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="No recipes matching filter"
        android:gravity="center"/>

</LinearLayout>
