...
        android:padding="20dip" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show All Recipes"
        android:id="@+id/button4"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="searchByIngredientsClick"
        android:padding="20dip"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
...
        android:layout_alignStart="@+id/button3"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favorite Recipes"
        android:id="@+id/button5"
        android:layout_below="@+id/button3"
        android:onClick="searchByFavoritesClick"
        android:padding="20dip"
        android:layout_alignRight="@+id/button3"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignLeft="@+id/button3"
...
